<resources>
    <string name="app_name">LLScript MultiTool</string>
    <string name="browse_name">MultiTool</string>
    <string name="script_name">MultiTool</string>
    <string name="preference_scriptName">scriptName</string>
    <string name="MainDescription">This is a script for Lightning launcher. You need it installed in order to use this app.</string>
    <string name="text_install">
        How to load it: Go to lightning launcher, open the menu, click scripts/load a script and choose this script.
        \n
        \nHow to update it: Repeat the same process. If the name is the same it will be overwritten.
    </string>
    <string name="text_noLauncherFound">Warning: Lightning Launcher was not found on your device.</string>
    <string name="button_noLauncherFound">Open Play Store</string>
    <string name="text_repositoryImporter">\nOptional:\nThe repository importer app has been detected on your device.\nYou can click here to import/update the script automatically.</string>
    <string name="button_repositoryImporter">Import</string>
    <string name="button_repositoryImporter_importing">Importing… (takes too long? click to try again)</string>
    <string name="button_repositoryImporter_importOk">Done. (Click to import again)</string>
    <string name="button_repositoryImporter_importError">Error. Click to try again</string>
    <string name="text_nameOfScript">If you want to, you can choose a custom name here:</string>
    <string name="hint_nameOfScript">Name of the script</string>
    <string name="link_googlePlus">https://plus.google.com/communities/109017480579703391739</string>
    <string name="link_email_scheme">mailto</string>
    <string name="link_email_adress">support@faendir.com</string>
    <string name="link_email_subject">LLScript Multitool</string>
    <string name="link_email_chooser">Send email…</string>
    <string name="imageDescription_divider">divider</string>
    <string name="title_scriptManager">Script Manager</string>
    <string name="pref_id">id</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_format">Beautify</string>
    <string name="menu_restore">Restore</string>
    <string name="title_settings">Settings</string>
    <string name="pref_directory">directory</string>
    <string name="menu_search">Search</string>
    <string name="message_pleaseWait">Please wait…</string>
    <string name="title_format">Format</string>
    <string name="button_cancel">Cancel</string>
    <string name="message_done">Done!</string>
    <string name="title_search">Search for (Regex)</string>
    <string name="button_ok">OK</string>
    <string name="text_matches_lines">Matches (lines):\n</string>
    <string name="title_matches">Matches</string>
    <string name="title_rename">Rename %s</string>
    <string name="text_folder">Folder</string>
    <string name="text_script">Script</string>
    <string name="text_backupSuccessful">"Script successfully backed up"</string>
    <string name="text_backupFailed">"Failed to backup script"</string>
    <string name="text_scripts">" scripts"</string>
    <string name="title_delete">Delete</string>
    <string name="message_deletePart1">"Do you want to delete "</string>
    <string name="message_deletePart2">" item(s)?"</string>
    <string name="title_chooseName">Choose name</string>
    <string name="message_overwrite">Script does already exist. Overwrite?</string>
    <string name="text_loading">The app is loading data from the launcher.\n Please wait.\n\nIf you see this message for more than 1 Minute please click the button below.</string>
    <string name="toast_menuDisabled">Please wait until all data is loaded</string>
    <string name="title_launcherScript">Launcher Script</string>
    <string name="reload_script">Reload Script</string>
    <string name="pref_lastFragment">lastFragment</string>
    <string name="title_links">Links</string>
    <string name="play_store">Play Store</string>
    <string name="google_community">Google + Community</string>
    <string name="email">Email</string>
    <string name="title_enableAcra">Enable Bug Reports</string>
    <string name="pref_enableAcra">acra.enable</string>
    <string name="toast_failedLoad">"Failed to load file "</string>
    <string name="toast_failedDirWrite">Failed to access directory. Please choose an accessible backup location</string>
    <string name="title_backupDir">Backup Directory</string>
    <string name="pref_spaces">spaces</string>
    <string name="title_gestureLauncher">Gesture Launcher</string>
    <string name="add_gesture">Add Gesture</string>
    <string name="title_activity_gesture">Gesture Editor</string>
    <string name="title_activity_intent_chooser">Choose Action</string>
    <string name="action_help">Help</string>
    <string name="text_noGestures">No gestures found. To create a new gesture, press the “Add” Button.</string>
    <string name="title_musicWidget">Music widget</string>
    <string name="title_listener">Notification Listener</string>
    <string name="text_listener">This requires the notification listener to be enabled. Do you want to enable it now?</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="pref_musicDefault">musicDefaultPackage</string>
    <string name="key_shortcuts">shortcuts</string>
    <string name="key_appInfo">applicationInfo</string>
    <string name="key_target">target</string>
    <string name="pref_enableBackup">backup.enable</string>
    <string name="pref_backupTime">backup.time</string>
    <string name="button_monday">Mo</string>
    <string name="button_tuesday">Tu</string>
    <string name="button_wednesday">We</string>
    <string name="button_thursday">Th</string>
    <string name="button_friday">Fr</string>
    <string name="button_saturday">Sa</string>
    <string name="button_sunday">Su</string>
    <string name="button_chooseAction">Choose Action</string>
    <string name="edit_enterName">Enter name…</string>
    <string name="text_drawHere">Draw here:</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_set">Set</string>
    <string name="toast_noAction">You have to choose an action</string>
    <string name="toast_noGesture">Please draw a gesture first</string>
    <string name="toast_noLabel">The label can\'t be empty</string>
    <string name="title_help">Help</string>
    <string name="message_helpGesture">You can add a Gesture view inside Lightning: Menu → + → Plugins → Gesture Launcher.\nIf a gesture you draw onto this view is recognized as one of this list, the specified action will be executed.</string>
    <string name="message_helpMusic">You can add a Music Widget inside Lightning: Menu → + → Plugins → Music Widget</string>
    <string name="title_apps">Apps</string>
    <string name="title_shortcuts">Shortcuts</string>
    <string name="toast_cantLoadAction">Failed to load action info</string>
    <string name="text_itemRemoved">Item removed</string>
    <string name="pref_coverMode">coverFillMode</string>
    <string-array name="list_coverMode">
        <item>Overscale</item>
        <item>Underscale</item>
        <item>Stretch</item>
    </string-array>
    <string-array name="listCoverModeKeys">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="default_coverMode">0</string>
    <string name="title_coverMode">Cover scale mode</string>
    <string name="button_updateMusic">Try to update existing widgets</string>
    <string name="text_play">Play/Pause</string>
    <string name="text_previous">Previous</string>
    <string name="text_next">Next</string>
    <string name="pref_keepSorted">keepSorted</string>
    <string name="title_keepSorted">Keep items sorted</string>
    <string name="title_drawer">App Drawer</string>
    <string name="text_buyOrTrial">%s is a paid feature. You can either start a 7-day Trial or buy it.</string>
    <string name="button_buy">Buy</string>
    <string name="button_trial">Trial</string>
    <string name="summary_spaces">Inserts spaces around operators</string>
    <string name="title_spaces">Format : Spaces</string>
    <string name="title_defaultPlayer">Default Player</string>
    <string name="title_backup">Automatic Backup</string>
    <string name="title_enableBackup">Enable automatic Backup</string>
    <string name="title_backupTime">Execution time</string>
    <string name="pref_activePlayers">activePlayers</string>
    <string name="title_activePlayers">Active Players</string>
    <string name="title_export">Export Gestures</string>
    <string name="title_import">Import Gestures</string>
    <string name="title_trial">Trial</string>
    <string name="message_trial">Do you want to start your Trial for %s now?</string>
    <string name="title_buy">Buy</string>
    <string name="message_buy">Do you want to buy %s now?</string>
    <string name="summary_unlocked">Unlocked. Thanks for supporting MultiTool!</string>
    <string name="summary_notStarted">Trial not started.</string>
    <string name="summary_ongoing">Trial ongoing. Ends %s</string>
    <string name="summary_used">Trial is over.</string>
    <string name="summary_unknown">Trial state unknown.</string>
    <string name="pref_altControl">alternativeControlMode</string>
    <string name="title_altControl">Alternative Control Mode</string>
    <string name="toast_noGestures">No gestures found</string>
    <string name="toast_exportedTo">Exported gestures to %s</string>
    <string name="toast_failedExportTo">Failed to export gestures to %s</string>
    <string name="toast_imported">Imported Gestures successfully</string>
    <string name="toast_importFailed">Importing Gestures failed: Invalid file</string>
    <string name="pref_hiddenApps">hiddenApps</string>
    <string name="title_hiddenApps">Restore hidden apps</string>
    <string name="title_info">Info</string>
    <string name="title_version">Version</string>
    <string name="title_immersive">Toggle immersive mode</string>
    <string name="title_animation">Animation</string>
    <string name="menu_disable">Disable</string>
    <string name="menu_enable">Enable</string>
    <string name="unread_prefix">unread.</string>
    <string name="title_badge">Badge</string>
    <string name="toast_playError">Sorry, google services are not responding</string>
    <string name="text_scriptDeleted">Script deleted. Tap to undo</string>
    <string name="text_gestureDeleted">Gesture deleted. Tap to undo</string>
    <string name="key_badgeIntentPackages">badeIntentSupportingPackages</string>
    <string name="title_appChooser">Choose App</string>
    <string name="action_search">Search</string>
    <string name="pref_showZero">badgeShowZero</string>
    <string name="summary_showZero">If this is disabled, badges without notifications are hidden. That means badges might be invisible when you create them!</string>
    <string name="title_showZero">Show Zero</string>
    <string name="pref_jobIds">backup.job_ids</string>
    <string name="action_change_sorting">Sorting</string>
    <string name="toast_clipboard">Copied to clipboard</string>
    <string name="title_id">Your ID</string>
    <string name="summary_id">Do not share this ID unless you have a problem with paid content and have been asked for it.</string>
    <string name="title_idDialog">Your ID</string>
    <string name="button_copyToClipboard">Copy to Clipboard</string>
    <string name="button_close">Close</string>
    <string name="pref_setupClass">setupClass</string>
    <string name="title_bulldoze">Bulldoze</string>
    <string name="title_card">Card Stack</string>
    <string name="title_flip">Flip</string>
    <string name="title_flip3d">Flip 3D</string>
    <string name="title_shrink">Shrink</string>
    <string name="title_turn">Turn</string>
    <string name="title_cube">Cube</string>
</resources>