<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_launcher_script"
            android:title="@string/title_launcherScript"/>
        <item
            android:id="@+id/nav_script_manager"
            android:title="@string/title_scriptManager"/>
    </group>


    <group android:checkableBehavior="none"
        android:id="@+id/group2">
        <item android:title="@string/title_links">
            <menu>
                <item
                    android:id="@+id/nav_play_store"
                    android:title="@string/play_store"/>
                <item
                    android:id="@+id/nav_community"
                    android:title="@string/google_community"/>
                <item
                    android:id="@+id/nav_email"
                    android:title="@string/email"/>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="none"
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"/>
    </group>

</menu>
